--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,20 +6,20 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - platform: x86_64-linux
-            target: x86_64-unknown-linux-gnu
-          - platform: x86_64-linux-musl
-            target: x86_64-unknown-linux-musl
-          - platform: aarch64-linux
-            target: aarch64-unknown-linux-gnu
-          - platform: aarch64-linux-musl
-            target: aarch64-unknown-linux-musl
-          - platform: x86_64-darwin
-            target: x86_64-apple-darwin
+          # - platform: x86_64-linux
+          #   target: x86_64-unknown-linux-gnu
+          # - platform: x86_64-linux-musl
+          #   target: x86_64-unknown-linux-musl
+          # - platform: aarch64-linux
+          #   target: aarch64-unknown-linux-gnu
+          # - platform: aarch64-linux-musl
+          #   target: aarch64-unknown-linux-musl
+          # - platform: x86_64-darwin
+          #   target: x86_64-apple-darwin
           - platform: arm64-darwin
             target: aarch64-apple-darwin
-          - platform: x64-mingw-ucrt
-            target: x86_64-pc-windows-gnu
+          # - platform: x64-mingw-ucrt
+          #   target: x86_64-pc-windows-gnu
     runs-on: ubuntu-latest
     name: ${{ matrix.platform }}
     steps:
@@ -36,6 +36,8 @@ jobs:
         with:
           platform: ${{ matrix.platform }}
           ruby-versions: "3.4,3.3,3.2"
+        env:
+          AWS_LC_SYS_CMAKE_BUILDER: 1
       - uses: actions/upload-artifact@v4
         with:
           name: cross-gem-${{ matrix.platform }}
