Improved Cargo.toml [skip ci]

--- a/ext/deltalake/Cargo.toml
+++ b/ext/deltalake/Cargo.toml
@@ -15,10 +15,18 @@ arrow = { version = "55.2", features = ["ffi"] }
 arrow-schema = { version = "55.2", features = ["serde"] }
 chrono = "0.4"
 delta_kernel = "0.13"
-deltalake = { version = "=0.27.0", features = ["azure", "datafusion", "gcs", "s3"] }
 futures = "0.3"
 magnus = "0.7"
 num_cpus = "1"
 serde = "1"
 serde_json = "1"
 tokio = { version = "1", features = ["rt-multi-thread"] }
+
+[dependencies.deltalake]
+version = "=0.27.0"
+features = [
+    "azure",
+    "datafusion",
+    "gcs",
+    "s3"
+]
