--- a/ext/deltalake/Cargo.toml
+++ b/ext/deltalake/Cargo.toml
@@ -16,7 +16,7 @@ arrow-schema = { version = "55.2", features = ["serde"] }
 chrono = "0.4"
 delta_kernel = "0.13"
 futures = "0.3"
-magnus = { version = "0.8", features = ["old-api"] }
+magnus = "0.8"
 num_cpus = "1"
 serde = "1"
 serde_json = "1"
