Updated deltalake to 0.28.0

--- a/ext/deltalake/Cargo.toml
+++ b/ext/deltalake/Cargo.toml
@@ -14,7 +14,7 @@ crate-type = ["cdylib"]
 arrow = { version = "55.2", features = ["ffi"] }
 arrow-schema = { version = "55.2", features = ["serde"] }
 chrono = "0.4"
-delta_kernel = "0.13"
+delta_kernel = { version = "0.14", features = ["arrow-55", "default-engine-rustls"] }
 futures = "0.3"
 magnus = "0.8"
 num_cpus = "1"
@@ -23,7 +23,7 @@ serde_json = "1"
 tokio = { version = "1", features = ["rt-multi-thread"] }
 
 [dependencies.deltalake]
-version = "=0.27.0"
+version = "=0.28.0"
 features = [
     "azure",
     "datafusion",
