--- a/ext/deltalake/Cargo.toml
+++ b/ext/deltalake/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "deltalake"
+name = "deltalake-ruby"
 version = "0.2.4"
 license = "Apache-2.0"
 authors = ["Andrew Kane <andrew@ankane.org>"]
