--- a/ext/deltalake/Cargo.toml
+++ b/ext/deltalake/Cargo.toml
@@ -12,19 +12,20 @@ name = "deltalake"
 crate-type = ["cdylib"]
 
 [dependencies]
-arrow = { version = "56", features = ["ffi"] }
-arrow-schema = { version = "56", features = ["serde"] }
+arrow = { version = "57", features = ["ffi"] }
+arrow-schema = { version = "57", features = ["serde"] }
 chrono = "0.4"
-delta_kernel = { version = "0.16", features = ["arrow-56", "default-engine-rustls"] }
+delta_kernel = { version = "0.19", features = ["arrow-57", "default-engine-rustls"] }
 futures = "0.3"
 magnus = "0.8"
 num_cpus = "1"
 serde = "1"
 serde_json = "1"
 tokio = { version = "1", features = ["rt-multi-thread"] }
+uuid = { version = "1", features = ["serde", "v4"] }
 
 [dependencies.deltalake]
-version = "=0.29.4"
+version = "=0.30.0"
 features = [
     "azure",
     "datafusion",
